# robopi

./: .gitignore  Makefile  pyproject.toml  requirements-dev.txt
conf/: dependencies.sh  picamera2-dependencies.sh  pigpio-setup.sh
docs/: conf.py  index.rst
docs/content/: compatibility.rst  compatibilty.rst  installation.rst
src/robopi/: __main__.py  arraytransform.py  camera.py  motor.c
