[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "robopi"
version = "0.0.1"
dependencies = [
    "opencv-python",
    "flask",
    "numpy<2.0.0",
    "gunicorn"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["robopi"]
namespaces = false
